correct some sub pages alignment mistakes mistakes

--- a/assets/css/page1.css
+++ b/assets/css/page1.css
@@ -30,7 +30,10 @@ margin: 20px 0px 20px 0px;
 }
 
 .items-button{
-    border: none;
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
     background-color: white;
     margin-top: 20px;
 }
@@ -79,6 +82,7 @@ margin: 20px 0px 20px 0px;
     } 
     .footer p{
         font-size: 14px;
+        text-align: center;
     }
 }
 
@@ -119,8 +123,7 @@ margin: 20px 0px 20px 0px;
     } 
     .footer p{
         font-size: 14px;
+        text-align: center;
     }
-    .footer{
-        padding-left: 180px;
-    }
+    
 }
