--- a/assets/css/page2.css
+++ b/assets/css/page2.css
@@ -36,6 +36,7 @@ body{
     }
     .footer p{
         font-size: 14px;
+        text-align: center;
     }
 }
 
@@ -57,6 +58,6 @@ body{
         font-size: 14px;
     }
     .footer{
-        padding-left: 180px;
+        text-align: center;
     }
 }
