--- a/assets/css/page3.css
+++ b/assets/css/page3.css
@@ -38,34 +38,7 @@ body{
     .hero-text{
         width: 100%;
     }
-    .hero-button{
-        padding: 15px 50px 15px 50px;
-        background-color: #61A734;
-        border: none;
-        color: white;
-        margin-bottom: 20px;
-    }
-    .hero-text h1{
-        color: #E8582B; 
-        font-family: great vibes;
-        font-size: 100px;
-    }
-    .hero-text h2{
-        margin-left: 130px;
-        margin-bottom: -30px;
-        color: #61A734;
-        font-weight: 700;
-    }
-    .hero-text p{
-        font-size: 15px;
-    }
-    .footer p{
-        font-size: 14px;
-    }
-}
-
-@media screen and (min-width:376px) and (max-width:768px){
-    .hero-text{
+    .hero-img{
         width: 100%;
     }
     .hero-button{
@@ -91,8 +64,41 @@ body{
     }
     .footer p{
         font-size: 14px;
+        text-align: center;
     }
-    .footer{
-        padding-left: 180px;
+}
+
+@media screen and (min-width:376px) and (max-width:768px){
+    .hero-text{
+        width: 100%;
     }
+    .hero-img{
+        width: 100%;
+    }
+    .hero-button{
+        padding: 15px 50px 15px 50px;
+        background-color: #61A734;
+        border: none;
+        color: white;
+        margin-bottom: 20px;
+    }
+    .hero-text h1{
+        color: #E8582B; 
+        font-family: great vibes;
+        font-size: 100px;
+    }
+    .hero-text h2{
+        margin-left: 130px;
+        margin-bottom: -30px;
+        color: #61A734;
+        font-weight: 700;
+    }
+    .hero-text p{
+        font-size: 15px;
+    }
+    .footer p{
+        font-size: 14px;
+        text-align: center;
+    }
+    
 }
